# MADE

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/agent/: chemeleon_diversity_planner_comp.yaml  chemeleon_generative_baseline.yaml  chemeleon_llm_planner.yaml  chemeleon_mlip_ranking_chain_filter.yaml  llm_react_orchestrator.yaml  random_generator_baseline.yaml  random_generator_diversity_planner_comp.yaml  random_generator_llm_planner.yaml
configs/agent/filter/: chain.yaml  min_distance.yaml  noop.yaml  smact.yaml  uniqueness.yaml
configs/agent/generator/: cached.yaml  chemeleon.yaml  random.yaml
configs/agent/planner/: diversity.yaml  grid_search.yaml  iterative.yaml  llm.yaml  random.yaml  ucb.yaml
configs/agent/scorer/: chain.yaml  diversity.yaml  llm.yaml  oracle.yaml  random.yaml
configs/dataset/: phase_diagram.yaml
configs/environment/: convex_hull.yaml
configs/logger/: wandb.yaml
configs/oracle/: analytic.yaml  mace.yaml  orb.yaml
data/: 2023-02-07-mp-elemental-reference-entries.json
data/systems_10_mp_20/: systems_quaternary_n10_maxatoms20_intermetallic_smact.json  systems_quinary_n10_maxatoms20_intermetallic_smact.json  systems_ternary_n10_maxatoms20_intermetallic_smact.json
made/: __init__.py
made/agents/: README.md  base.py  workflow.py
made/agents/filters/: __init__.py  min_distance.py  smact.py
made/agents/generators/: __init__.py  chemeleon.py  random.py
made/agents/planners/: __init__.py  grid_search.py  llm.py
made/agents/scorers/: diversity.py  llm.py  random.py
made/data/: __init__.py
made/envs/: convex_hull.py
made/evaluation/: metrics.py
made/oracles/: ase_potential.py
made/oracles/classic/: analytic.py
made/oracles/mace/: __init__.py
made/oracles/qe/: qe_oracle.py
made/utils/: __init__.py  llm.py  structure_hash.py
notebooks/: basic_analysis.ipynb  results_analysis_utils.py
scripts/: generate_systems.py  run_baseline_experiments.py  run_baseline_experiments_modal.py  run_benchmark.py  run_multi_systems.py  run_table1_minimal_baselines.sh
src/made/envs/: base.py  (+1 more)
(+22 files in other folders)
